# AICentral

01. LLM Engineering Basics/: 03. Calling OpenAI API Endpoint.ipynb  05. Brochure Generator.ipynb  06. Put up the Brochure in Gradio.ipynb  07. Create a Conversational UI with Gradio.ipynb  08. Build an Airline AI Assistant in Gradio.ipynb  09. Add SQLite Database functionality to the tool.ipynb  main.py  pyproject.toml
02. Open Source GenAI/: 01. Introduction_to_Huggingface_Pipelines.ipynb  02_HuggingFace_Pipelines_for_NLP_Tasks.ipynb  03_Tokenizers.ipynb  04_Deep_Dive_into_Transformers_and_Models.ipynb  05_Create_Minutes_of_Meeting_from_Audio.ipynb
03. LLM Evaluation/: 01. C++ Code Generator.ipynb
03. RAG/: 01. Simple Lookup based RAG.ipynb
04. Statistical Foundations/: 01. Define standard normal distribution.ipynb  02. Binomial Distribution.ipynb  03. Conditional Probability of Titanic survival.ipynb
LLM Engineering Basics/: 01. getting started.ipynb  02. Website Summarizer.ipynb  03. Calling OpenAI API Endpoint.ipynb  04. Tokenization with tiktoken.ipynb  05. Brochure Generator.ipynb  pyproject.toml  utilities.py
